fix anchor content offset got invisible

--- a/src/documents/styles/main.css
+++ b/src/documents/styles/main.css
@@ -101,3 +101,11 @@ body {
 .gray {
   color: gray;
 }
+
+
+.anchor{
+  display: block;
+  height: 51px; 
+  margin-top: -51px; 
+  visibility: hidden;
+}
